Added conditions to the graph. They do not link up yet but the proper nodes have been made.

--- a/templates/example-graphs.html
+++ b/templates/example-graphs.html
@@ -6,7 +6,7 @@
     <title>Directed Graph Example with Mermaid.js</title>
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaid.initialize({ startOnLoad: true });
+        mermaid.initialize({ startOnLoad: true, maxTextSize: 90000 });
     </script>
     <style>
         body {
